feat: mandatory login everywhere + add bio and username to /register
